--- a/src/composer.json
+++ b/src/composer.json
@@ -20,6 +20,7 @@
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "haydenpierce/class-finder": "^0.4.1",
+        "mll-lab/laravel-graphql-playground": "^2.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
